...
        </ThemedText>
      </ThemedView>
      <ThemedView style={[{ backgroundColor }, styles.menuContainer]}>
        <MenuItem
          title="Profiles"
          iconName="person.fill"
          testID="menu-profiles"
          onPress={() => goTo("/parent/profilesList")}
        ></MenuItem>
        <MenuItem
          title="Bots"
          iconName="cpu"
          testID="menu-item-bots"
...
