...
                    <ThemedText style={styles.deckToastButtonText}>Study now</ThemedText>
                  </ThemedButton>
                </ThemedView>
              )}
              <ThemedView style={styles.inputContainer}>
                <ThemedTextInput
                  testID="chat-input"
                  autoFocus={!local.chatId}
                  multiline={true}
                  placeholder="Message…"
                  placeholderTextColor={placeholderColor}
                  onChangeText={setInput}
                  value={input}
...
                      color="#fff"
                      size={20}
                    ></IconSymbol>
                  </ThemedButton>
                ) : (
                  <ThemedButton
                    testID="send-button"
                    darkColor="#0a7ea4"
                    style={styles.sendButton}
                    onPress={sendChatToServer}
                  >
                    <IconSymbol
                      name="arrow.up"
...
